Modify Request Form & Wishlist

--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -11,7 +11,7 @@
         <img center src="./assets/images/logo.jpg" style="width:50%;margin-top:2%;border-radius:25%"/>    
       </div>
 
-  <form (ngSubmit)="login()" #registerForm="ngForm">
+  <form #registerForm="ngForm">
     <ion-row>
       <ion-col>
         <ion-list >
