--- a/src/pages/wishlist/wishlist.html
+++ b/src/pages/wishlist/wishlist.html
@@ -32,8 +32,8 @@
             <ion-label color="primary"></ion-label>
             <ion-input type="text" [(ngModel)]="it4" placeholder=""></ion-input>
           </ion-item>
-          <button ion-button block color="primary" >Add to my wishList</button>
-          <button ion-button block color="primary">Cancel</button>
+          <button ion-button block color="primary"  (click)="  addwishlist(i1,i2) ">Add to my wishList</button>
+          <button ion-button block color="primary" (click)="canceItem()">Cancel</button>
        
           
 
