--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -1,14 +1,15 @@
 <ion-header>
+
   <ion-navbar color="primary">
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Items</ion-title>
+    <ion-title>Wellcome To Shopping List</ion-title>
+    <!--ion-buttons end>
+      <button ion-button icon-only (click)="navigateToAddShoppingPage()">
+        <ion-icon name="md-add-circle"></ion-icon>
+      </button>
+    </ion-buttons-->
   </ion-navbar>
+
 </ion-header>
-
-
-
 
 <ion-content padding>
 
