--- a/src/pages/order/order.html
+++ b/src/pages/order/order.html
@@ -60,7 +60,7 @@
   
  </ion-list>
 <br><br><br><br><br>
- <button ion-button block color="primary" (click)="  addItem(name,quantity,supermarket,brand) ">Submit</button>
+ <button ion-button block color="primary" (click)="  showAlert(main_title, sub_title)">Submit</button>
  <button ion-button block color="primary" (click)="canceItem()">Cancel</button>
  
 
