--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,4 +1,11 @@
-
+<ion-header >
+  <ion-navbar color="primary">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title >Register</ion-title>
+  </ion-navbar>
+</ion-header>
 
 
 
